--- a/lang/es.json
+++ b/lang/es.json
@@ -478,5 +478,101 @@
   "merge.preview.sent_emails": "Correos enviados",
   "merge.preview.media_jobs": "Tareas de medios",
   "merge_failed": "Error al fusionar",
-  "user_merged": "Usuario fusionado"
+  "user_merged": "Usuario fusionado",
+  "task_description.monitor_collect_sessions": "Monitorización: recopilación de sesiones activas (Plex/Jellyfin)",
+  "nav.monitoring": "Monitorización",
+
+  "monitoring.title": "Monitorización",
+  "monitoring.subtitle": "Vista global Plex / Jellyfin",
+
+  "monitoring.cards.servers_online": "Servidores en línea",
+  "monitoring.cards.servers_offline": "Servidores fuera de línea",
+  "monitoring.cards.live_sessions": "Sesiones en curso",
+  "monitoring.cards.transcodes": "Transcodificaciones",
+
+  "monitoring.section.servers": "Servidores",
+  "monitoring.section.sessions": "Reproduciendo ahora",
+  "monitoring.section.events": "Últimos eventos",
+
+  "monitoring.table.server": "Servidor",
+  "monitoring.table.provider": "Tipo",
+  "monitoring.table.status": "Estado",
+  "monitoring.table.last_checked": "Última comprobación",
+
+  "monitoring.table.user": "Usuario",
+  "monitoring.table.state": "Estado",
+  "monitoring.table.title": "Título",
+  "monitoring.table.client": "Cliente",
+  "monitoring.table.last_seen": "Última actividad",
+
+  "monitoring.empty.sessions": "No hay sesiones en curso.",
+  "monitoring.empty.events": "No hay eventos recientes.",
+
+  "db_size": "Tamaño de la base de datos",
+
+  "auth.title_setup_admin": "Inicialización",
+  "auth.initialisation": "Inicialización",
+  "auth.setup_admin_description": "Define el correo del administrador y la contraseña antes de configurar los servidores.",
+  "auth.admin_email": "Correo del administrador",
+  "auth.admin_password": "Contraseña de administrador",
+  "auth.password_min_8": "Mínimo 8 caracteres",
+  "common.validate": "Validar",
+
+  "auth.title_login": "Inicio de sesión",
+  "auth.login": "Inicio de sesión",
+  "auth.login_description": "Se requiere acceso de administrador.",
+  "auth.password": "Contraseña",
+  "common.login": "Iniciar sesión",
+  "common.logout": "Cerrar sesión",
+  "auth.reset_link": "Restablecer contraseña",
+  "auth.reset_title": "Restablecer contraseña",
+  "auth.reset_subtitle": "Solo acceso local • No disponible de forma remota",
+  "auth.reset_explain_1": "Por razones de seguridad, el restablecimiento requiere acceso local al servidor (Unraid / SSH / consola).",
+  "auth.reset_steps_title": "Procedimiento",
+  "auth.reset_step_1": "Crear un archivo de restablecimiento en el servidor.",
+  "auth.reset_step_2": "Obtener el token (contenido del archivo).",
+  "auth.reset_step_3": "Abrir la página de restablecimiento e introducir el token, el nuevo correo y la nueva contraseña.",
+  "auth.reset_cmd_simple": "Comando simple:",
+  "auth.reset_cmd_random": "Comando con token aleatorio:",
+  "auth.reset_available": "Restablecimiento disponible (archivo detectado).",
+  "auth.reset_not_available": "Restablecimiento no disponible: no se encontró ningún archivo de reset en el servidor.",
+  "auth.reset_open_page": "Abrir página de restablecimiento",
+  "common.close": "Cerrar",
+  "auth.reset_step_1_simple": "Crear un archivo de restablecimiento en el servidor.",
+  "auth.reset_step_2_restart": "Reiniciar el contenedor VODUM.",
+  "auth.reset_step_3_setup": "Abrir la interfaz y redefinir el correo del administrador y la contraseña.",
+  "auth.reset_note_path": "Consejo: ajusta la ruta según la ubicación real del appdata de tu contenedor.",
+  "auth.reset_available_restart": "Archivo de reset detectado. Reinicia el contenedor ahora para restablecer las credenciales.",
+  "mail_history_title": "Historial",
+  "mail_history_desc": "Todos los correos enviados (correos automáticos de usuario + campañas).",
+
+  "mail_history_retention_years": "Retención (años)",
+  "mail_history_save_retention": "Guardar",
+  "mail_history_purge_now": "Purgar",
+
+  "mail_history_all_columns": "Todas las columnas",
+  "mail_history_filter_placeholder": "Filtrar…",
+  "mail_history_reset": "Restablecer",
+
+  "mail_history_col_date": "Fecha",
+  "mail_history_col_source": "Origen",
+  "mail_history_col_type": "Tipo",
+  "mail_history_col_subject": "Asunto",
+  "mail_history_col_username": "Usuario",
+  "mail_history_col_email": "Correo electrónico",
+  "mail_history_col_server": "Servidor",
+  "mail_history_col_status": "Estado",
+  "mail_history_col_expiration": "Expiración",
+
+  "mail_history_badge_user": "Usuario",
+  "mail_history_badge_campaign": "Campaña",
+
+  "mail_history_retention_saved": "Retención guardada ({years} año(s)).",
+  "mail_history_purged": "Historial purgado: {sent} correo(s) de usuario, {campaigns} campaña(s).",
+  "mail_history_purge_failed": "Error al purgar",
+  "mail_history_no_item_selected": "Ninguna fila seleccionada",
+  "mail_history_items_deleted": "{count} fila(s) eliminada(s).",
+  "mail_history_delete_failed": "Error al eliminar",
+
+  "mail_history_hint": "Consejo: la purga también elimina el historial mostrado en la ficha del usuario y el historial de campañas."
 }
