--- a/lang/de.json
+++ b/lang/de.json
@@ -574,6 +574,65 @@
   "mail_history_items_deleted": "{count} Zeile(n) gelöscht.",
   "mail_history_delete_failed": "Löschen fehlgeschlagen",
 
-  "mail_history_hint": "Tipp: Die Bereinigung entfernt auch den Verlauf in der Benutzeransicht und den Kampagnenverlauf."
+  "mail_history_hint": "Tipp: Die Bereinigung entfernt auch den Verlauf in der Benutzeransicht und den Kampagnenverlauf.",
+  "mail_welcome_templates": "Welcome Template",
+  "all_levels": "Alle Stufen",
+  "campaign_delete_failed": "Kampagne konnte nicht gelöscht werden",
+  "campaign_saved": "Kampagne gespeichert",
+  "campaigns_deleted": "Kampagne(n) gelöscht",
+  "client": "Client",
+  "delete_failed": "Löschen fehlgeschlagen",
+  "description": "Beschreibung",
+  "device": "Gerät",
+  "disabled": "Deaktiviert",
+  "done": "Fertig",
+  "expiration": "Ablauf",
+  "friday": "Freitag",
+  "gmail": "Gmail",
+  "history_purged": "Verlauf bereinigt",
+  "idle": "Inaktiv",
+  "info": "Info",
+  "items_deleted": "Element(e) gelöscht",
+  "jellyfin": "Jellyfin",
+  "jellyfin_id": "Jellyfin-ID",
+  "last_seen": "Zuletzt gesehen",
+  "lastname": "Nachname",
+  "level": "Stufe",
+  "mailing_toggle_error": "Mailing konnte nicht umgeschaltet werden",
+  "monday": "Montag",
+  "monitoring": "Monitoring",
+  "no": "Nein",
+  "no_campaign_selected": "Keine Kampagne ausgewählt",
+  "no_events": "Keine Ereignisse",
+  "no_item_selected": "Kein Element ausgewählt",
+  "no_templates": "Keine Vorlagen",
+  "other": "Sonstiges",
+  "outlook": "Outlook",
+  "plex": "Plex",
+  "purge_failed": "Bereinigung fehlgeschlagen",
+  "raw_payload": "Rohdaten",
+  "recent_events": "Letzte Ereignisse",
+  "recent_events_hint": "Zeigt die neuesten von Vodum protokollierten Ereignisse und Aktionen.",
+  "reminder": "Erinnerung",
+  "retention_saved": "Aufbewahrung gespeichert",
+  "running": "Läuft",
+  "saturday": "Samstag",
+  "section_id": "Section-ID",
+  "session_details": "Sitzungsdetails",
+  "session_key": "Sitzungsschlüssel",
+  "source": "Quelle",
+  "subscription_live": "Abo aktiv",
+  "sunday": "Sonntag",
+  "template_test_failed": "Vorlagentest fehlgeschlagen",
+  "template_test_help": "Eine Test-E-Mail wird an die in den Einstellungen konfigurierte Admin-Adresse gesendet.",
+  "thursday": "Donnerstag",
+  "transcoding": "Transkodierung",
+  "tuesday": "Dienstag",
+  "username": "Benutzername",
+  "warning": "Warnung",
+  "wednesday": "Mittwoch",
+  "yahoo": "Yahoo"
+
+  
   
 }
