--- a/lang/es.json
+++ b/lang/es.json
@@ -574,5 +574,63 @@
   "mail_history_items_deleted": "{count} fila(s) eliminada(s).",
   "mail_history_delete_failed": "Error al eliminar",
 
-  "mail_history_hint": "Consejo: la purga también elimina el historial mostrado en la ficha del usuario y el historial de campañas."
+  "mail_history_hint": "Consejo: la purga también elimina el historial mostrado en la ficha del usuario y el historial de campañas.",
+  "mail_welcome_templates": "Welcome Template",
+  "all_levels": "Todos los niveles",
+  "campaign_delete_failed": "No se pudo eliminar la campaña",
+  "campaign_saved": "Campaña guardada",
+  "campaigns_deleted": "Campaña(s) eliminada(s)",
+  "client": "Cliente",
+  "delete_failed": "Error al eliminar",
+  "description": "Descripción",
+  "device": "Dispositivo",
+  "disabled": "Deshabilitado",
+  "done": "Hecho",
+  "expiration": "Vencimiento",
+  "friday": "Viernes",
+  "gmail": "Gmail",
+  "history_purged": "Historial purgado",
+  "idle": "Inactivo",
+  "info": "Info",
+  "items_deleted": "Elemento(s) eliminado(s)",
+  "jellyfin": "Jellyfin",
+  "jellyfin_id": "ID de Jellyfin",
+  "last_seen": "Visto por última vez",
+  "lastname": "Apellido",
+  "level": "Nivel",
+  "mailing_toggle_error": "No se pudo activar/desactivar el correo",
+  "monday": "Lunes",
+  "monitoring": "Monitoreo",
+  "no": "No",
+  "no_campaign_selected": "Ninguna campaña seleccionada",
+  "no_events": "Sin eventos",
+  "no_item_selected": "Ningún elemento seleccionado",
+  "no_templates": "Sin plantillas",
+  "other": "Otro",
+  "outlook": "Outlook",
+  "plex": "Plex",
+  "purge_failed": "Error al purgar",
+  "raw_payload": "Contenido bruto",
+  "recent_events": "Eventos recientes",
+  "recent_events_hint": "Muestra los últimos eventos y acciones registrados por Vodum.",
+  "reminder": "Recordatorio",
+  "retention_saved": "Retención guardada",
+  "running": "En ejecución",
+  "saturday": "Sábado",
+  "section_id": "ID de sección",
+  "session_details": "Detalles de sesión",
+  "session_key": "Clave de sesión",
+  "source": "Fuente",
+  "subscription_live": "Suscripción activa",
+  "sunday": "Domingo",
+  "template_test_failed": "Falló la prueba de la plantilla",
+  "template_test_help": "Se enviará un correo de prueba al email de administrador configurado en ajustes.",
+  "thursday": "Jueves",
+  "transcoding": "Transcodificación",
+  "tuesday": "Martes",
+  "username": "Nombre de usuario",
+  "warning": "Advertencia",
+  "wednesday": "Miércoles",
+  "yahoo": "Yahoo"
+
 }
