--- a/lang/it.json
+++ b/lang/it.json
@@ -574,6 +574,65 @@
   "mail_history_items_deleted": "{count} riga(e) eliminata(e).",
   "mail_history_delete_failed": "Eliminazione non riuscita",
 
-  "mail_history_hint": "Suggerimento: la pulizia rimuove anche la cronologia visibile nella scheda utente e la cronologia delle campagne."
+  "mail_history_hint": "Suggerimento: la pulizia rimuove anche la cronologia visibile nella scheda utente e la cronologia delle campagne.",
+  "mail_welcome_templates": "Welcome Template",
+  
+  "all_levels": "Tutti i livelli",
+  "campaign_delete_failed": "Eliminazione campagna non riuscita",
+  "campaign_saved": "Campagna salvata",
+  "campaigns_deleted": "Campagna/e eliminata/e",
+  "client": "Client",
+  "delete_failed": "Eliminazione non riuscita",
+  "description": "Descrizione",
+  "device": "Dispositivo",
+  "disabled": "Disabilitato",
+  "done": "Fatto",
+  "expiration": "Scadenza",
+  "friday": "Venerdì",
+  "gmail": "Gmail",
+  "history_purged": "Cronologia eliminata",
+  "idle": "Inattivo",
+  "info": "Info",
+  "items_deleted": "Elemento/i eliminato/i",
+  "jellyfin": "Jellyfin",
+  "jellyfin_id": "ID Jellyfin",
+  "last_seen": "Ultima attività",
+  "lastname": "Cognome",
+  "level": "Livello",
+  "mailing_toggle_error": "Impossibile attivare/disattivare il mailing",
+  "monday": "Lunedì",
+  "monitoring": "Monitoraggio",
+  "no": "No",
+  "no_campaign_selected": "Nessuna campagna selezionata",
+  "no_events": "Nessun evento",
+  "no_item_selected": "Nessun elemento selezionato",
+  "no_templates": "Nessun modello",
+  "other": "Altro",
+  "outlook": "Outlook",
+  "plex": "Plex",
+  "purge_failed": "Pulizia non riuscita",
+  "raw_payload": "Contenuto grezzo",
+  "recent_events": "Eventi recenti",
+  "recent_events_hint": "Mostra gli ultimi eventi e le azioni registrate da Vodum.",
+  "reminder": "Promemoria",
+  "retention_saved": "Conservazione salvata",
+  "running": "In esecuzione",
+  "saturday": "Sabato",
+  "section_id": "ID Sezione",
+  "session_details": "Dettagli sessione",
+  "session_key": "Chiave sessione",
+  "source": "Fonte",
+  "subscription_live": "Abbonamento attivo",
+  "sunday": "Domenica",
+  "template_test_failed": "Test del modello non riuscito",
+  "template_test_help": "Un'email di test verrà inviata all'indirizzo admin configurato nelle impostazioni.",
+  "thursday": "Giovedì",
+  "transcoding": "Transcodifica",
+  "tuesday": "Martedì",
+  "username": "Nome utente",
+  "warning": "Avviso",
+  "wednesday": "Mercoledì",
+  "yahoo": "Yahoo"
+
 
 }
