--- a/lang/en.json
+++ b/lang/en.json
@@ -575,7 +575,65 @@
   "mail_history_items_deleted": "{count} row(s) deleted.",
   "mail_history_delete_failed": "Delete failed",
 
-  "mail_history_hint": "Tip: purging also clears the history shown in user details and the campaign history."
+  "mail_history_hint": "Tip: purging also clears the history shown in user details and the campaign history.",
+  "mail_welcome_templates": "Welcome Template",
+  "all_levels": "All levels",
+  "campaign_delete_failed": "Failed to delete campaign",
+  "campaign_saved": "Campaign saved",
+  "campaigns_deleted": "Campaign(s) deleted",
+  "client": "Client",
+  "delete_failed": "Delete failed",
+  "description": "Description",
+  "device": "Device",
+  "disabled": "Disabled",
+  "done": "Done",
+  "expiration": "Expiration",
+  "friday": "Friday",
+  "gmail": "Gmail",
+  "history_purged": "History purged",
+  "idle": "Idle",
+  "info": "Info",
+  "items_deleted": "Item(s) deleted",
+  "jellyfin": "Jellyfin",
+  "jellyfin_id": "Jellyfin ID",
+  "last_seen": "Last seen",
+  "lastname": "Last name",
+  "level": "Level",
+  "mailing_toggle_error": "Failed to toggle mailing",
+  "monday": "Monday",
+  "monitoring": "Monitoring",
+  "no": "No",
+  "no_campaign_selected": "No campaign selected",
+  "no_events": "No events",
+  "no_item_selected": "No item selected",
+  "no_templates": "No templates",
+  "other": "Other",
+  "outlook": "Outlook",
+  "plex": "Plex",
+  "purge_failed": "Purge failed",
+  "raw_payload": "Raw payload",
+  "recent_events": "Recent events",
+  "recent_events_hint": "Shows the latest events and actions recorded by Vodum.",
+  "reminder": "Reminder",
+  "retention_saved": "Retention saved",
+  "running": "Running",
+  "saturday": "Saturday",
+  "section_id": "Section ID",
+  "session_details": "Session details",
+  "session_key": "Session key",
+  "source": "Source",
+  "subscription_live": "Subscription live",
+  "sunday": "Sunday",
+  "template_test_failed": "Template test failed",
+  "template_test_help": "A test email will be sent to the admin email configured in settings.",
+  "thursday": "Thursday",
+  "transcoding": "Transcoding",
+  "tuesday": "Tuesday",
+  "username": "Username",
+  "warning": "Warning",
+  "wednesday": "Wednesday",
+  "yahoo": "Yahoo"
+
 
   
   
